@@ -1,6 +1,9 @@
 2012-07-14 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.fr>
 	* Bug fix: Remove method on NameSearchTree could remove the wrong item.
 	* Feature: Added version information display. Display compiled package information.
+	* Feature: Added locking type for safer multi-threading.
+	* Feature: Interface to mark an entry as a directory.
+	* Fix: Returned link count in stat now count only directories.
 
 2012-07-04 Pierrick Caillon <pierrick.caillon+zipdirfs@megami.Fr>
 	* Feature: The content of the files in the exposed Zip files can be read.
